--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Live Webcam Stream with Emotion Detection</title>
 </head>
+
 <body>
-    <h1>Live Webcam Stream</h1>
     <img id="video_stream" src="{{ url_for('video') }}" alt="Live Webcam Stream">
-    <p id="emotion_display"></p>
+    <p id="name"></p>
+    <p id="emotion"></p>
 
     <script>
         const video = document.getElementById('video_stream');
         const emotionDisplay = document.getElementById('emotion_display');
 
-        video.onplay = function() {
+        setInterval(function () {
+            fetch('/data')
+                .then(response => response.json())
+                .then(data => {
+                    // Update the page with the new data
+                    document.getElementById('name').textContent = data.name;
+                    document.getElementById('emotion').textContent = data.emotion;
+                });
+        }, 1000);  // Fe
+
+        video.onplay = function () {
             const chunks = [];
             const source = new EventSource("/video");
 
-            source.onmessage = function(event) {
+            source.onmessage = function (event) {
                 chunks.push(event.data);
                 const fullFrame = chunks.join('');
                 chunks = [];
@@ -25,16 +37,17 @@
                 video.srcObject = new Blob([fullFrame], { type: 'image/jpeg' });
             };
 
-            source.onerror = function(error) {
+            source.onerror = function (error) {
                 console.error("Error:", error);
                 emotionDisplay.textContent = "Error: Could not receive video stream.";
             };
         };
 
-        source.onmessage = function(event) {
+        source.onmessage = function (event) {
             const emotion = event.data.split('Emotion: ')[1].split(' (')[0];
             emotionDisplay.textContent = `Detected Emotion: ${emotion}`;
         };
     </script>
 </body>
+
 </html>
