--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Live Webcam Stream with Emotion Detection</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        body {
+            font-family: 'Inter', sans-serif; 
+        }
+    </style>
 </head>
 
-<body>
-    <img id="video_stream" src="{{ url_for('video') }}" alt="Live Webcam Stream">
-    <p id="name"></p>
-    <p id="emotion"></p>
-    <p id="date_time"></p>
-    <p id="text"></p>
-    <img id="image" />
-    <img id="face" />
+<body class="relative">
+
+    <div class="flex flex-col relative">
+        <div class="justify-center relative">
+            <img id="video_stream" src="{{ url_for('video') }}" alt="Live Webcam Stream"
+                class="mx-auto max-w-full h-auto">
+            <div class="absolute top-0 left-0 right-0 bottom-0 flex items-end justify-center">
+                <div class="flex justify-center mb-2"> <!-- Adjust margin to position near the bottom -->
+                    <img id="face" class="w-16 h-16" />
+                    <div class="text-white ml-2">
+                        <p id="name" class=""></p>
+                        <p id="date_time" class=""></p>
+                        <p id="text" class=""></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     <script>
         const video = document.getElementById('video_stream');
@@ -25,17 +45,13 @@
                 .then(data => {
                     // Update the page with the new data
                     document.getElementById('name').textContent = data.name;
-                    document.getElementById('emotion').textContent = data.emotion;
                     document.getElementById('date_time').textContent = data.date_time;
                     document.getElementById('text').textContent = data.text;
-                    if (data.image) {
-                        document.getElementById('image').src = 'data:image/jpeg;base64,' + data.image;
-                    }
                     if (data.face) {
                         document.getElementById('face').src = 'data:face/jpeg;base64,' + data.face;
                     }
                 });
-        }, 1000);  // Fe
+        }, 1000);
 
         video.onplay = function () {
             const chunks = [];
