--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
             <img id="video_stream" src="{{ url_for('video') }}" alt="Live Webcam Stream"
                 class="mx-auto max-w-full h-auto">
             <div class="absolute top-0 left-0 right-0 bottom-0 flex items-end justify-center">
-                <div class="flex justify-center mb-2"> <!-- Adjust margin to position near the bottom -->
+                <div class="flex justify-center mb-2 bg-red-200	"> <!-- Adjust margin to position near the bottom -->
                     <img id="face" class="w-16 h-16" />
                     <div class="text-white ml-2">
                         <p id="name" class=""></p>
