--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,9 @@
             <img id="video_stream" src="{{ url_for('video') }}" alt="Live Webcam Stream"
                 class="mx-auto max-w-full h-auto">
             <div class="absolute top-0 left-0 right-0 bottom-0 flex items-end justify-center">
-                <div class="flex justify-center mb-2 bg-red-200	"> <!-- Adjust margin to position near the bottom -->
-                    <img id="face" class="w-16 h-16" />
-                    <div class="text-white ml-2">
+                <div class="flex justify-center mb-2 bg-white bg-opacity-75	rounded-lg p-3"> <!-- Adjust margin to position near the bottom -->
+                    <img id="face" class="w-16 h-16 rounded-md" />
+                    <div class="text-black ml-2">
                         <p id="name" class=""></p>
                         <p id="date_time" class=""></p>
                         <p id="text" class=""></p>
